# titration_bot

./: .gitignore  LICENSE  MANIFEST.in  README.md  details.py  env_example  pyproject.toml  requirements.txt  setup.py
config/: config.json
notebooks/: Mebip_pKa_UVVis.ipynb  titration_analysis_.ipynb  titration_usecase.ipynb  uv_plotting.ipynb
src/: __init__.py  hera.py  init_titration.py
src/libs/: parser.py  titration.py  util.py
src/titration/: parser.py  titration.py  util.py
