[project]
name = "titration-bot"
version = "0.0.3"
description = "A titration tool used to design and combine UV/Vis data with design into python data structures"
authors = [{name = "Luca Bertossi", email = "lucabertossi@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "mfethuls",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
titration = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
mfethuls = { git = "ssh://git@github.com/lucaAyt/mfethuls.git" }